Fix SCAN algorithm.