@@ -1,4 +1,5 @@
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 
 /**
@@ -16,7 +17,7 @@ public class SCAN implements IDiskAlgorithm {
 
 		// Sort requests by track
 		List<DiskRequest> sortedRequests = new ArrayList<>(requests);
-		sortedRequests.sort((a, b) -> Integer.compare(a.getTrack(), b.getTrack()));
+		sortedRequests.sort(Comparator.comparingInt(DiskRequest::getTrack));
 
 		// Split requests into those to the left and right of the initial position
 		List<DiskRequest> left = new ArrayList<>();
@@ -34,17 +35,19 @@ public class SCAN implements IDiskAlgorithm {
 		for (DiskRequest request : right) {
 			totalDistance += Math.abs(request.getTrack() - currentPosition);
 			currentPosition = request.getTrack();
+			System.out.println(request.getTrack() + "-" + currentPosition + "=" + totalDistance);
 		}
 
 		// Process requests to the left, in reverse order
 		if (!left.isEmpty()) {
-			totalDistance += Math.abs(currentPosition - left.get(left.size() - 1).getTrack());
-			currentPosition = left.get(left.size() - 1).getTrack();
+			totalDistance += Math.abs(currentPosition - left.getLast().getTrack());
+			currentPosition = left.getLast().getTrack();
 
 			for (int i = left.size() - 1; i >= 0; i--) {
 				DiskRequest request = left.get(i);
 				totalDistance += Math.abs(request.getTrack() - currentPosition);
 				currentPosition = request.getTrack();
+				System.out.println(request.getTrack() + "-" + currentPosition + "=" + totalDistance);
 			}
 		}
 
